# CPPJenkins

./: Jenkinsfile  docker-compose.yml
AplikacjaCPP/: CMakeLists.txt
AplikacjaCPP/src/: math_operations.cpp  math_operations.h
AplikacjaCPP/test/: test_math_operations.cpp
Jenkins/: Dockerfile
